# audio-viz

./: CMakeLists.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
core/include/: fft.h
core/src/: fft.cpp  main.cpp  wasm_interface.cpp
src/: background.ts  main.ts
